--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 						            font-size:50px;
 						          }
                                 .name{
-								      font-size:25px;
+								      font-size:20px;
 									  }	
                                 .re{
 						             font-size:22px;
@@ -168,7 +168,7 @@
 						             text-align:center;
                                      }		
                                 .pt{
-                                    padding-left:26%;
+                                    padding-left:20%;
 									font-size:19px;
 							       }
                                 .dont{
@@ -184,7 +184,7 @@
 						                  text-align:center;
                                          }
 									.pt{
-                                         padding-left:20%;
+                                         padding-left:15%;
 									     font-size:18px;
 							           }
 									.h1{
@@ -199,7 +199,7 @@
 						                 font-size:25px;
 							           }
 									.name{
-								          font-size:21px;
+								          font-size:18px;
 									     }	
                                     .spat{
 						              padding-left:20%;
@@ -220,7 +220,7 @@
 						                  text-align:center;
                                          }
 									.pt{
-                                         padding-left:17%;
+                                         padding-left:10%;
 									     font-size:16px;
 							           }
 									.ppp{
@@ -232,7 +232,7 @@
 							               border-radius:60%;
 							             }
 									 .name{
-								            font-size:19px;
+								            font-size:15px;
 									      }
 									  .re{
 						                   font-size:20px;
@@ -292,7 +292,7 @@
 </ul>
 <b/><i><p class="re">
 "I have worked very hard with Nehru. I told him he should be the light of Asia, to show all those millions how they can shine out,instead of accepting the darkness of communism."<br>
-<span class="spat">-Winston Churchill, Former Prime <span class="pe"/> Minister of the United Kingdom
+<span class="spat">-Winston Churchill, Former Prime Minister of the United Kingdom
 </p></i><b/>
 </fieldset>
 </div>
